# cpp-skeleton

./: .gitignore  CMakeLists.txt  README.MD  README.md  init.sh
src/: CMakeLists.txt  Foobar.cc  Foobar.h  main.cc
test/: CMakeLists.txt  Foobar-test.cc
